--- a/AndroidApp/feature/src/main/AndroidManifest.xml
+++ b/AndroidApp/feature/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vabil.starterhacks2019.feature">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application>
         <activity android:name=".MainActivity">
             <intent-filter>
