--- a/Android-Speech-to-Text-Example/local.properties
+++ b/Android-Speech-to-Text-Example/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 13 11:44:42 EST 2019
-sdk.dir=C\:\\Users\\viole\\AppData\\Local\\Android\\Sdk
+#Sun Jan 13 12:16:25 EST 2019
+sdk.dir=C\:\\Users\\vabil\\AppData\\Local\\Android\\Sdk
